2003-05-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/GNUmakefile: Compatibility fix for new
	makeinfo.  Please upgrade to texinfo CVS or pretest > 4.5.90 (rsn)
	for making binary packages; info splitting bug has been fixed.

	* Documentation/user/refman.itely: Compile fixes.

2003-05-16  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el: XEmacs-fix: Use (mark) to find active-mark.
	Count \midi -keywords also for a region.

2003-05-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/lookup.cc (LY_DEFINE): new function

	* Documentation/user/tutorial.itely: updates

2003-05-15  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el: Allow Midi on buffer.
	Use only '.ly'-extension, remove '.sly' and '.fly'.
	Allow use of inactive regions. Invoke next Command on Master file, 
	Buffer or Region, if C-cc, C-cb, or C-cr, accordingly, was pressed.

2003-05-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/tutorial.itely: updates.

2003-05-14  Heikki Junes  <hjunes@cc.hut.fi>

	* lilypond-mode.el: Show messages in one line only, as in XEmacs.

2003-05-13  Juergen Reuter  <reuter@ipd.uka.de>

	* lily/coherent-ligature-engraver.cc: fixed typo

	* lily/coherent-ligature-engraver.cc,
	lily/gregorian-ligature-engraver.cc,
	lily/ligature-bracket-engraver.cc, lily/ligature-engraver.cc,
	lily/mensural-ligature-engraver.cc, lily/note-heads-engraver.cc,
	lily/vaticana-ligature-engraver.cc,
	lily/include/ligature-engraver.hh, ly/gregorian-init.ly,
	scm/grob-description.scm: cleanup: junked LigatureHead grob and
	removed all ligature specific stuff from NoteHead code

	* lily/ligature-head.cc, lily/include/ligature-head.hh: removed;
	ligatures now use regular noteheads

	* lily/vaticana-ligature.cc: tiny code cleanups

	* lily/vaticana-ligature-engraver.cc: bugfix: insert additional
	space between two adjacent noteheads of the same pitch

	* scm/grob-description.scm: bugfix: VaticanaLigature: interface