@@ -402,13 +402,10 @@ by replacing the @internalsref{Note_heads_engraver} by the
 @end example
 
 For example,
-
-@ignore
-@example[relative 0]
+@example
   \time 2/4
   c2. c8 d4 e f g a b c8 c2 b4 a g16 f4 e d c8. c2 
 @end example
-@end ignore
 
 @lilypond[noindent]
 \score{
