@@ -468,7 +468,10 @@ HYPHEN		--
 				return MARKUP_HEAD_SCM0_MARKUP1;
 			else if (tag == ly_symbol2scm ("scheme0-scheme1-markup2"))
 				return MARKUP_HEAD_SCM0_SCM1_MARKUP2;
+			else if (tag == ly_symbol2scm ("scheme0-scheme1-scheme2"))
+				return MARKUP_HEAD_SCM0_SCM1_SCM2;
 			else {
+				programming_error ("No parser tag defined for this signature. Abort"); 
 				ly_display_scm (s);
 				assert(false);
 			}
