@@ -10,6 +10,25 @@
 		 (number->string (ly:get-mus-property mus 'denominator))
 		 ))
 
+;; metronome marks
+(define-public (make-metronome-markup event context)
+  (let*
+      ((dur  (ly:get-mus-property event 'tempo-unit))
+       (count (ly:get-mus-property event 'metronome-count))
+       (note-mark     (make-note-markup (ly:duration-log dur)
+					(ly:duration-dot-count dur)
+					1)
+		      )
+       )
+
+    (make-line-markup
+     (list
+      note-mark
+      (make-simple-markup  "=")
+      (make-simple-markup (number->string count))
+      
+  ))))
+
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 (define-public (music-map function music)
