@@ -1,3 +1,14 @@
+2003-05-17  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* input/regression/markup-note.ly: new file
+
+	* input/regression/metronome-marking.ly: new file
+
+	* lily/metronome-engraver.cc: new file. Print \tempo markings.
+
+	* scm/new-markup.scm (note-markup): make a note glyph, useful for
+	metronome marks.
+
 2003-05-17  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* Documentation/user/GNUmakefile: Compatibility fix for new
